Compilation/test/valides/test1.tpc
/* #include <stdio.h>
   #include <math.h> */
/* int trinome(int a, int b, int c) ;
    int valeur(int a, int b, int c, int x) ; */
/* Résolution d'une équation du deuxième degré */
int r1, r2;

int main(void) {
   int max, c, b;
   b=1;
   c = 10;
   while (b<=1) {
       c=-1;
       while (c<=1) {
           print(b);
           print(c);
           if (trinome(1,b,c)) {
               print(r1);
               print(r2);
               print(valeur(1,b,c,r1));
               print(valeur(1,b,c,r2));
               if (0<=r1 && r1<=max && 0>=r2 && r2>=-max)
                   return 0;
           }
           c=c+1;
       }
       b=b+1;
   }
   return 0;
}